2012-10-13  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE_MINI/board.c [!DFU_SUPPORT] (boardInit): Don't run
	when "user switch" is pushed.  This is for JTAG/SWD debugger.

2012-10-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (neug_setup): Support neug_*_max.

	* src/random.c (ep_process): Enable health tests for
	NEUG_MODE_RAW.
	(rng): Don't use the result on error for NEUG_MODE_RAW.
	(neug_rc_max, neug_p64_max, neug_p4k_max): New.
	(repetition_count_test, adaptive_proportion_64_test)
	(adaptive_proportion_4096_test): Record maximum counts.
	(noise_source_cnt_max_reset): New.
	(neug_mode_select): Call noise_source_cnt_max_reset on mode
	change.

	* tool/neug_check.py (get_info): Rename.
	(main): Support max counts.

2012-10-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (EP_ROUND_RAW_DATA_INPUTS): Set it to 32.

	* tool/dfuse.py: Update from Gnuk 1.0.1.

	* src/chconf.h (CORTEX_VTOR_INIT): Define.

	* src/neug.ld.in (.sys): Follow the change of file layout.

	* src/halconf.h (HAL_USE_EXT, HAL_USE_RTC): Define.
	(ADC_USE_WAIT, ADC_USE_MUTUAL_EXCLUSION, SERIAL_BUFFERS_SIZE):
	Remove.

	* boards/FST_01/mcuconf.h (STM32_RTCSEL): Define.
	(STM32_USBPRE, STM32_MCO): Remove.
	* boards/STBEE/mcuconf.h: Likewise.
	* boards/STM8S_DISCOVERY/mcuconf.h: Likewise.
	* boards/OLIMEX_STM32_H103/mcuconf.h: Likewise.
	* boards/STBEE_MINI/mcuconf.h: Likewise.
	* boards/CQ_STARM/mcuconf.h: Likewise.
	* boards/STM32_PRIMER2/mcuconf.h: Likewise.

	* boards/common/mcuconf-common.h (STM32_NO_INIT)
	(STM32_HSI_ENABLED, STM32_LSI_ENABLED, STM32_HSE_ENABLED)
	(STM32_LSE_ENABLED, STM32_USB_CLOCK_REQUIRED, STM32_USBPRE)
	(STM32_MCOSEL, STM32_PVD_ENABLE, STM32_PLS): Define.

	* chibios: Updated to 2.4.3.

	* src/usb_stm32f103.c: Rename (was: usb-lld.c).
	* src/Makefile.in (CSRC): Follow the rename.

2012-10-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (rng_gen): Remove.
	(rng): Merge rng_gen, avoiding bigger lock.
	(neug_mode_select): Better synchronization to rng thread.